--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/configurar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/configurar.xhtml
@@ -64,7 +64,7 @@
                 <p:commandLink action="#{gestionClaseInteracController.agregarPantalla()}">
                     <i class="icon-ascreen Fs25 Red" style="cursor: pointer" title="Modificar tamaño de pantalla de clase"></i>
                 </p:commandLink>
-                <p:panelGrid columns="4" class="Container100">
+                <p:panelGrid columns="4">
                     <p:commandLink action="#{gestionClaseInteracController.agregarPantalla()}" update="clase">
                         <i class="icon-add180 Fs25 Red" style="cursor: pointer" title="Añadir Página a sección Actual"></i>
                     </p:commandLink>
